src/styles/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import url("mapbox-gl/dist/mapbox-gl.css");

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  @apply font-base text-medium-900;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.headline {
  @apply font-highlight font-bold text-2xl text-medium-900;
}

